--- a/Data processing + visualization.ipynb
+++ b/Data processing + visualization.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing the libraries needed\n",
+    "\n",
+    "# hello\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,7 +50,6 @@
     "bl3_rig = np.array(df2['R'])\n",
     "bl3_flux = np.array(df2['TOA'])\n",
     "bl3_flux_rig_rescale = bl3_flux * (bl3_rig ** 2.7)\n",
-    "\n",
     "\n",
     "bl9_rig = np.array(df3['R'])\n",
     "bl9_flux = np.array(df3['TOA'])\n",
